se agregan iconos de login y carrito de compras

--- a/agregaralcarrito.html
+++ b/agregaralcarrito.html
@@ -5,6 +5,7 @@
         <title> Agregar al carrito </title>
         <script src="agregaralcarrito.js"></script>
         <link rel="stylesheet" href="agregaralcarrito.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     </head>
     <body> 
         <section class = "mensaje-producto-agregado">
@@ -17,13 +18,11 @@
                         <u>Mujer</u>
                     </li>
                     <li class = "sale">Rebajas</li>
-                    <li> 
-                        <a href="https://github.com/elirebolledo/ppt.git">🗝</a>
-                    </li>
+                    <li><i class="bi bi-box-arrow-in-right"></i></li>
                 </ul>
             </nav>
             <u id = "subtitulo">Outfit onfire para mujer</u>
-            <button id="btnVerCarrito" onclick="mostrarCarrito();">🛒</button>
+            <button id="btnVerCarrito" onclick="mostrarCarrito();"><i class="bi bi-cart2"></i></button>
     
             <div class = "añadir-al-carrito">
                     <input type="radio" name="seleccionar-ropa" id="body">
@@ -83,4 +82,5 @@
             </div> 
         </section>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
